[workspace]
members = [
    "api-admin",
    "api-internal",
    "api-public",
    "core",
    "db",
    "app",
    "settings",
    "tests"
]

resolver = "2"

[patch.crates-io]
async-graphql-actix-web = { git = 'https://github.com/sergeysova/async-graphql', branch = 'upgrade-actix-web' }
async-graphql = { git = 'https://github.com/sergeysova/async-graphql', branch = 'upgrade-actix-web' }