[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "accesso-api-admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accesso-app = { "path" = "../app" }
accesso-core = { "path" = "../core" }
accesso-db = { "path" = "../db" }
accesso-settings = { "path" = "../settings" }
actix-cors = "0.5.4"
actix-http = "3.0.0-beta.8"
actix-router = "0.4.0"
actix-rt = "2.2.0"
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
color-eyre = "0.5.11"
dotenv = "0.15.0"
eyre = "0.6.5"
futures = "0.3.15"
juniper = { version = "0.15", features = ["expose-test-schema"] }
juniper_actix = "0.4.0"
log = "0.4"
opentelemetry = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "0.3.0"
sha2 = "0.8.1"
sodiumoxide = "0.2.6"
thiserror = "1.0.26"
time = "0.2.26"
tokio = "1.7.1"
tracing = "0.1.26"
tracing-actix-web = { version = "0.4.0-beta.9", default-features = false, features = ["emit_event_on_error", "opentelemetry_0_15"] }
tracing-opentelemetry = "0.14.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
validator = "0.14.0"