[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2021"
name = "accesso-api-admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accesso-app = { "path" = "../app" }
accesso-core = { "path" = "../core" }
accesso-db = { "path" = "../db" }
accesso-settings = { "path" = "../settings" }
actix-cors = "0.6.0-beta.3"
actix-http = "3.0.0-beta.11"
actix-router = "0.4.0"
actix-rt = "2.3.0"
actix-web = { version = "4.0.0-beta.10", features = ["rustls"] }
async-graphql = { version = "3.0.4", features = ["uuid", "chrono", "chrono-tz", "url"] }
async-graphql-actix-web = "3.0.4"
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
color-eyre = "0.5.11"
dotenv = "0.15.0"
eyre = "0.6.5"
futures = "0.3.17"
log = "0.4.14"
opentelemetry = "0.16.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_plain = "1.0.0"
sha2 = "0.9.8"
sodiumoxide = "0.2.7"
thiserror = "1.0.30"
time = "0.3.4"
tokio = "1.13.1"
tracing = "0.1.29"
tracing-actix-web = { version = "0.5.0-beta.1", default-features = false, features = ["emit_event_on_error", "opentelemetry_0_15"] }
tracing-opentelemetry = "0.16.0"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
validator = "0.14.0"
