[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2021"
name = "accesso-api-internal-old"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesso-core = {"path" = "../core"}
accesso-db = {"path" = "../db"}
accesso-settings = {"path" = "../settings"}
accesso-app = { "path" = "../app" }
actix-http = "3.0.0-beta.11"
actix-router = "0.4.0"
actix-rt = "2.3.0"
actix-swagger = "=0.3.0-beta.3"
cookie = "0.16.0-rc.1"
actix-web = { version = "4.0.0-beta.10", features = ["rustls"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
dotenv = "0.15.0"
futures = "0.3.17"
tokio = "1.13.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_plain = "1.0.0"
sha2 = "0.9.8"
time = "0.3.4"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing = "0.1.29"
tracing-opentelemetry = "0.16.0"
tracing-actix-web = { version = "0.5.0-beta.1", default-features = false, features = ["emit_event_on_error", "opentelemetry_0_15"] }
opentelemetry = "0.16.0"
thiserror = "1.0.30"
validator = "0.14.0"
# reqwest = { version = "0.10", features = ["blocking", "json"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
sodiumoxide = "0.2.7"
