[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "accesso-api-internal"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesso-core = {"path" = "../core"}
accesso-db = {"path" = "../db"}
accesso-settings = {"path" = "../settings"}
accesso-app = { "path" = "../app" }
actix-http = "3.0.0-beta.8"
actix-router = "0.4.0"
actix-rt = "2.2.0"
actix-swagger = "0.3.0"
actix-web = "4.0.0-beta.8"
awc = { version = "3.0.0-beta.7", features = ["openssl"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
dotenv = "0.15.0"
futures = "0.3.15"
tokio = "1.7.1"
log = "0.4"
r2d2 = "0.8.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_plain = "0.3.0"
sha2 = "0.8.1"
time = "0.2.26"
anyhow = "1.0.41"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["env-filter", "tracing-log"] }
# reqwest = { version = "0.10", features = ["blocking", "json"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
sodiumoxide = "0.2.6"
[dependencies.diesel]
version = "1.4.6"
features = [
  "postgres",
  "uuidv07",
  "chrono",
  "r2d2",
  "serde_json",
]