[package]
name = "accesso-api-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
lambda-web = { version = "0.2.0", features = ["actix4"] }
log = "0.4.17"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.14", features = ["serde-human-readable", "serde-well-known", "quickcheck", "macros"] }
utoipa = { version = "2.2.0", features = ["json", "actix_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
