[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "accesso-api-public"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accesso-core = { "path" = "../core" }
accesso-db = { "path" = "../db" }
accesso-app = { "path" = "../app" }
accesso-settings = { "path" = "../settings" }
actix-http = "3.0.0-beta.8"
actix-router = "0.4.0"
actix-rt = "2.2.0"
actix-swagger = "=0.3.0-beta.1"
actix-web = "4.0.0-beta.8"
awc = { version = "3.0.0-beta.7", features = ["openssl"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
dotenv = "0.15.0"
futures = "0.3.15"
tokio = "1.7.1"
log = "0.4"
r2d2 = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "0.3.0"
thiserror = "1.0.26"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing-actix-web = "0.4.0-beta.9"
opentelemetry = "0.15.0"
validator = "0.14.0"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", features = ["env-filter", "tracing-log"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
