[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2021"
name = "accesso-api-public"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accesso-core = { "path" = "../core" }
accesso-db = { "path" = "../db" }
accesso-app = { "path" = "../app" }
accesso-settings = { "path" = "../settings" }
actix-http = "3.0.0-beta.11"
actix-router = "0.4.0"
actix-rt = "2.3.0"
actix-swagger = "=0.3.0-beta.3"
actix-web = "4.0.0-beta.10"
awc = { version = "3.0.0-beta.9", features = ["rustls"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
dotenv = "0.15.0"
futures = "0.3.17"
tokio = "1.13.0"
log = "0.4.14"
r2d2 = "0.8.9"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_plain = "1.0.0"
thiserror = "1.0.30"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing-actix-web = "0.5.0-beta.1"
opentelemetry = "0.16.0"
validator = "0.14.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "tracing-log"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
