[package]
name = "accesso-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
hashbrown = "0.11.2"
accesso-db = { path = "../db" }
tracing = "0.1.26"
accesso-core = { path = "../core" }
validator = "0.13.0"
uuid = { version = "0.8.2", features = ["v4"]}
async-trait = "0.1.50"

[dev-dependencies]
accesso-app = { path = ".", features = ["testing"] }
actix-rt = "2.2.0"

[features]
testing = ["accesso-core/testing"]