[package]
name = "accesso-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
hashbrown = "0.11.2"
accesso-db = { path = "../db" }
accesso-core = { path = "../core" }
accesso-settings = { path = "../settings" }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-appender = "0.2.0"
tracing-bunyan-formatter = "0.3.0"
tracing = "0.1.29"
opentelemetry-otlp = "0.9.0"
opentelemetry-jaeger = "0.15.0"
cookie = "0.16.0-rc.1"
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.16.0"
validator = "0.14.0"
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1.51"
eyre = "0.6.5"
serde = { version = "1.0.130", features = ["derive"] }
actix-web = { version = "4.0.0-beta.10", default-features = false }
time = "0.3.4"

[dev-dependencies]
accesso-app = { path = ".", features = ["testing"] }
actix-rt = "2.3.0"

[features]
testing = ["accesso-core/testing"]
