[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "accesso-core"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.0.0-beta.8"
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
futures = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.8.2", features = ["v4"] }
validator = "0.14.0"
validator_derive = "0.14.0"
sodiumoxide = "0.2.6"
rand = "0.8.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.4", default-features=false, features = ["rustls-tls", "json"]}
actix-rt = "2.2.0"
insta = { version = "0.15.0", optional = true }
mockall = { version = "0.10.1", optional = true }
async-trait = "0.1.50"
thiserror = "1.0.26"
eyre = "0.6.5"
tracing = "0.1.26"
tracing-bunyan-formatter = { version = "0.2.4", default-features = false }
sqlx-core = { version = "0.5.5", default-features = false }
accesso-settings = { path = "../settings" }

[features]
testing = ["insta", "mockall"]
default = []
