[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2021"
name = "accesso-core"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["v4"] }
validator = "0.14.0"
validator_derive = "0.14.0"
sodiumoxide = "0.2.7"
rand = "0.8.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "json"] }
actix-rt = "2.3.0"
insta = { version = "1.8.0", optional = true }
mockall = { version = "0.10.2", optional = true }
async-trait = "0.1.51"
thiserror = "1.0.30"
eyre = "0.6.5"
tracing = "0.1.29"
sqlx-core = { version = "0.5.9", default-features = false }
accesso-settings = { path = "../settings" }

[features]
testing = ["insta", "mockall"]
default = []
