[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "accesso-db"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accesso-core = { path = "../core" }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
log = "0.4"
r2d2 = "0.8.6"
serde = "1.0.104"
serde_json = "1.0.44"
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.diesel]
version = "1.4.6"
features = [
  "postgres",
  "uuidv07",
  "chrono",
  "r2d2",
  "serde_json",
]
