[package]
authors = ["Sergey Sova <mail@sergeysova.com>", "Kirill Mironov <vetrokm@gmail.com>"]
edition = "2021"
name = "accesso-db"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
accesso-core = { path = "../core" }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
tracing = "0.1.29"
serde = "1.0.130"
serde_json = "1.0.68"
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1.51"
sqlx = { version = "0.5.9", default-features = false, features = ["uuid", "postgres", "chrono", "macros", "runtime-actix-rustls", "offline"] }
