[package]
name = "accesso-public-logic"
version = "0.2.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.10", features = [] }
uuid = { version = "0.7.4", features = ["v4"] }
time = { version = "0.1.39" }
validator = "0.10.0"
validator_derive = "0.10.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = "0.15.0"
mockall = "0.7.0"
