[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "accesso-public-logic"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = {version = "0.4.10", features = []}
serde = {version = "1.0", features = ["derive"]}
time = {version = "0.1.39"}
uuid = {version = "0.7.4", features = ["v4"]}
validator = "0.10.0"
validator_derive = "0.10.0"

[dev-dependencies]
insta = "0.15.0"
mockall = "0.7.0"
