[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2021"
name = "accesso-settings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
serde = { version = "1.0.130", features = ["derive"] }
